@@ -60,7 +60,7 @@
 #define GST_TAG_GEO_LOCATION_SUBLOCATION    "geo-location-sublocation"
 #define GST_TAG_CAPTURE_ORIENTATION         "capture-orientation"
 
-/* FIXME: This should be customizable somehow */
+/* FIXME: This should be customizable somehow. */
 #define G_DIGICAM_CAMERABIN_STILL_4X3_HIGH_WIDTH 2576;
 #define G_DIGICAM_CAMERABIN_STILL_4X3_HIGH_HEIGHT 1936;
 #define G_DIGICAM_CAMERABIN_STILL_4X3_MEDIUM_WIDTH 2048;
@@ -68,12 +68,12 @@
 #define G_DIGICAM_CAMERABIN_STILL_4X3_LOW_WIDTH 1280;
 #define G_DIGICAM_CAMERABIN_STILL_4X3_LOW_HEIGHT 960;
 
-#define G_DIGICAM_CAMERABIN_STILL_16X9_HIGH_WIDTH 2576;
-#define G_DIGICAM_CAMERABIN_STILL_16X9_HIGH_HEIGHT 1448;
-#define G_DIGICAM_CAMERABIN_STILL_16X9_MEDIUM_WIDTH 2576;
-#define G_DIGICAM_CAMERABIN_STILL_16X9_MEDIUM_HEIGHT 1448;
-#define G_DIGICAM_CAMERABIN_STILL_16X9_LOW_WIDTH 2576;
-#define G_DIGICAM_CAMERABIN_STILL_16X9_LOW_HEIGHT 1448;
+#define G_DIGICAM_CAMERABIN_STILL_16X9_HIGH_WIDTH 2560;
+#define G_DIGICAM_CAMERABIN_STILL_16X9_HIGH_HEIGHT 1440;
+#define G_DIGICAM_CAMERABIN_STILL_16X9_MEDIUM_WIDTH 2560;
+#define G_DIGICAM_CAMERABIN_STILL_16X9_MEDIUM_HEIGHT 1440;
+#define G_DIGICAM_CAMERABIN_STILL_16X9_LOW_WIDTH 2560;
+#define G_DIGICAM_CAMERABIN_STILL_16X9_LOW_HEIGHT 1440;
 
 
 #define G_DIGICAM_CAMERABIN_VIDEO_4X3_HIGH_WIDTH 640;
@@ -91,7 +91,7 @@
 #define G_DIGICAM_CAMERABIN_VIDEO_16X9_LOW_HEIGHT 480;
 
 
-/* viewfinder resolutions and fps for still picture*/
+/* Viewfinder resolutions and fps for still picture. */
 #define G_DIGICAM_CAMERABIN_VIEWFINDER_4X3_WIDTH 640;
 #define G_DIGICAM_CAMERABIN_VIEWFINDER_4X3_HEIGHT 480;
 #define G_DIGICAM_CAMERABIN_VIEWFINDER_4X3_FPS 2993;
@@ -100,7 +100,7 @@
 #define G_DIGICAM_CAMERABIN_VIEWFINDER_16X9_HEIGHT 450;
 #define G_DIGICAM_CAMERABIN_VIEWFINDER_16X9_FPS 2988;
 
-/* framerate for video widescreen mode */
+/* Framerate for video widescreen mode. */
 #define G_DIGICAM_CAMERABIN_VIEWFINDER_16X9_VIDEO_FPS 2500;
 
 #define G_DIGICAM_CAMERABIN_PHOTO_CAPTURE_START_MESSAGE "photo-capture-start"
